# open-dental-site

./: .dockerignore  .env.example  .flake8  .gitignore  README.md  deploy-image-to-docker.sh  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-production.yml  docker-compose.yml  dump-data.sh  env_setup.sh  init-data.sh  isort.cfg  pyproject.toml  setup.cfg  update.sh
.github/workflows/: lint.yml  python-app.yml
conf/data/: about.json  contacts.json  photos.json  policy.json  pricegroups.json  prices.json  reviews.json  servicegroups.json  services.json  staff.json  works.json
conf/nginx/: Dockerfile  nginx.conf
conf/nginx/conf.d/: default.conf
scripts/: reviews.py
scripts/reviews/: download.py  load.py
src/: manage.py
src/clinic/: admin.py  forms.py  models.py  services.py  urls.py  views.py
src/clinic/migrations/: 0001_initial.py  0002_alter_about_about.py  0002_alter_contact_address_alter_contact_email_and_more.py  0002_alter_license_image_alter_staff_image.py  0002_contact.py  0002_price_initial.py  0002_remove_staff_stage.py  0002_servicegroup_short_description.py  0003_alter_review_email.py  0003_delete_media_remove_review_email_remove_review_phone_and_more.py  (+14 more)
src/config/: settings.py  sitemap.py  urls.py
src/main/: fields.py  forms.py  middleware.py  services.py  urls.py  views.py
src/prices/: admin.py  models.py  urls.py  views.py
src/records/: admin.py  forms.py  models.py
src/reviews/: forms.py  models.py  services.py  urls.py  views.py
src/services/: admin.py  models.py  services.py  urls.py  views.py
src/staff/: admin.py  models.py  services.py  urls.py  views.py
src/templates/: base.html  robots.txt
src/works/: admin.py  models.py  services.py  urls.py  views.py
(+68 files in other folders)
