[tool.poetry]
name = "dental-site"
version = "0.1.0"
description = ""
authors = ["MironBerch <mironberchetov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
