[project]
name = "dental-site"
version = "0.1.0"
description = "dental-site"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "django-cachalot>=2.8.0",
    "django-ckeditor-5>=0.2.17",
    "django-debug-toolbar>=5.1.0",
    "django-redis>=5.4.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
]
